--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-
+/* Color declarations */
 :root {
     --light-red: hsl(0, 100%, 67%);
     --orangey-yellow: hsl(39, 100%, 56%);
@@ -18,6 +18,8 @@
 
     --pale-blue: hsl(221, 100%, 96%);
 }
+
+/* Font decalarations */
 @font-face {
     font-family:'Hanken' ;
     src: url(https://fonts.google.com/specimen/Hanken+Grotesk);
